--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
 	<div class="content">
-		<h1 id="title">This is a plain old website</h1>
-		<p id="text-field">This is example of text field</p>
+		<!-- <h1 id="title">This is a plain old website</h1>
+		<p id="text-field">This is example of text field</p> -->
 	</div>
 </body>
 </html>
